--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 CMakeLists.txt.user
 CMakeCache.txt
+CMakeSettings.json
 CMakeFiles
 CMakeScripts
 Testing
@@ -9,3 +10,4 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+out
