--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,17 @@ else()
     target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra)
 endif()
 
+if (EMSCRIPTEN)
+    # Attach data folder to Emscripten builds.
+    target_link_options(${PROJECT_NAME} PRIVATE --preload-file "${CMAKE_CURRENT_SOURCE_DIR}/data@data")
+    # Set output to html to generate preview pages, otherwise you'll have to make your own html.
+    set_target_properties(
+        ${PROJECT_NAME}
+        PROPERTIES
+            SUFFIX ".html"
+    )
+endif()
+
 find_package(libtcod CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE libtcod::libtcod)
 
